Fixed alignment + new features
Aligned the timer to the center appropriately for all screen dimensions and added the basic functionality of randomized scrambles appearing and having times being logged according the scramble it corresponds to.

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,14 @@ main{
 .lower-container {
     display: flex;
 }
-.scramble{
+#scramble{
     background-color: #88b6be;
     width: 100%;
     text-align:center;
 
+    padding:10px;
+    word-wrap:break-word;
+    font-size: 50px;
     margin-left: 1em;
     margin-right: 1em;
 }
@@ -48,16 +51,20 @@ button{
 #times-box {
     background-color: #444c4e;
     width: 17%;
-    height: 38em;
+    height: 80vh;
     text-align:center;
 
     margin-left: 1em;
     margin-right: 1em;
 }
 #timer{
-    margin-left: 5.3em;
-    margin-top: 1.5em;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-25%, -50%);
     font-size: 8em;
+    margin: 0;
+    text-align: center;
 } 
 .timer-red{
     color: rgb(212, 4, 4);
